<resources>
    <string name="app_name">Oto Takip</string>
    <string name="araclarim">Araçlarım</string>
    <string name="yaklasanlar">Yaklaşanlar</string>
    <string name="yakinimdakiler">Yakındakiler</string>
    <string name="ipuclari">İpuçları</string>
    <string name="navigation1">Hesabım</string>
    <string name="navigation2">Hatırlatma Ayarları</string>
    <string name="navigation3">İpuçları</string>
    <string name="navigation4">Uygulamayı Oyla</string>
    <string name="navigation5">Çıkış Yap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hakkimizda">Hakkımızda</string>
    <string name="netyok">Görünüşe göre internet bağlantısında \n bir şeyler ters gitti.</string>
    <string name="tekrardene">TEKRAR DENE</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDGC1bJ5rssbR99zm8JrDE-3oSiYhmR-5g
    </string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="app_name_with_index">Oto Takip (%1$d/%2$d)</string>
    <string name="mail_alan_gerekli">E-posta kısmı boş geçilemez.</string>
    <string name="plaka_alan_gerekli">Plaka boş geçilemez.</string>
    <string name="sifre_alan_gerekli">Şifre kısmı boş geçilemez.</string>
    <string name="eposta_gecersiz">E-posta adresiniz geçersiz.</string>
    <string name="sifre_gecersiz">Parola çok kısa</string>
    <string name="parola_gecersiz">Parolanız geçersiz</string>
    <string name="parola_uyusmuyor">Parolalar eşleşmiyor</string>
    <string name="facebook_app_id">690673814447908</string>
    <string name="facebook_provider_id">"facebook.com"</string>
    <string name="facebookhashh">bG6IF2O7TT0E1xvrEUxWKlc1CzQ=</string>
</resources>
