<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kullanici"
            android:icon="@drawable/icon_kullanici"
            android:title="@string/navigation1" />
        <item
            android:id="@+id/nav_hatirlatma"
            android:icon="@drawable/icon_hatirlatma"
            android:title="@string/navigation2" />
        <item
            android:id="@+id/nav_ipucu"
            android:icon="@drawable/icon_ipucu"
            android:title="@string/navigation3" />

        <item
            android:id="@+id/nav_oyla"
            android:icon="@drawable/icon_like"
            android:title="@string/navigation4" />

        <item
            android:id="@+id/nav_cikis"
            android:icon="@drawable/icon_cikis"
            android:title="@string/navigation5" />
    </group>

</menu>
